Задание 15 - Вставлен svg спрайт ч3

--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -60,7 +60,7 @@
   }
 }
 
-.contacts__input--phone-icon {
+.contacts__input-phone {
   position: relative;
   width: 100%;
 
@@ -73,10 +73,16 @@
     height: 58px;
 
     background-color: #e6e6e6;
-    background-image: url("../img/icon-phone.svg");
-    background-repeat: no-repeat;
-    background-position: center;
   }
+}
+
+.contacts__input-phone-icon {
+  position: absolute;
+  top: 20px;
+  right: 19px;
+  width: 18px;
+  height: 18px;
+  z-index: 1;
 }
 
 .contacts__input--email-icon {
