--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -15,14 +15,8 @@
   z-index: 1;
 }
 
-.page-header__blue-background {
-  display: none;
-}
-
-.page-header__bridge {
-  display: none;
-}
-
+.page-header__blue-background,
+.page-header__bridge,
 .page-header__clouds {
   display: none;
 }
@@ -32,7 +26,6 @@
     top: 0;
   }
 
-  .page-header__bridge,
   .page-header__clouds {
     display: inline;
   }
@@ -48,6 +41,7 @@
     height: 96px;
   }
 
+  .page-header__bridge,
   .page-header__blue-background {
     display: inline;
   }
