Задание 15 - Вставлены векторная графика и svg спрайт

--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -85,7 +85,7 @@
   z-index: 1;
 }
 
-.contacts__input--email-icon {
+.contacts__input-email {
   position: relative;
   width: 100%;
 
@@ -98,10 +98,16 @@
     height: 58px;
 
     background-color: #e6e6e6;
-    background-image: url("../img/icon-mail.svg");
-    background-repeat: no-repeat;
-    background-position: center;
   }
+}
+
+.contacts__input-email-icon {
+  position: absolute;
+  top: 21px;
+  right: 21px;
+  width: 16px;
+  height: 16px;
+  z-index: 1;
 }
 
 @media (min-width: @tablet-width) {
