Задание 17 - Выполнена автоматизация сборки

--- a/source/less/blocks/gallary.less
+++ b/source/less/blocks/gallary.less
@@ -1,14 +1,10 @@
 .gallary {
-  // border: 2px solid @green;
-  // margin: 2px;
-  // padding: 2px;
   margin: 0;
   padding: 0;
   line-height: 24px;
 }
 
 .gallary__item {
-  // border: 2px solid @black;
   border-top: 1px solid #e5e5e5;
   padding-top: 23px;
   padding-left: 20px;
@@ -19,6 +15,10 @@
 .gallary__image {
   background-color: @light-blue;
   vertical-align: middle;
+
+  width: 100%;
+  height: 280px;
+  object-fit: cover;
 }
 
 .gallary__description,
