--- a/source/less/style.less
+++ b/source/less/style.less
@@ -7,6 +7,7 @@
     url("../fonts/ptsans.woff") format("woff");
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -15,6 +16,7 @@
     url("../fonts/ptsansbold.woff") format("woff");
   font-weight: bold;
   font-style: normal;
+  font-display: swap;
 }
 
 body {
