Задание 18 - Добавлена интерактивная карта; исправлена ошибка дубликатов ID в SVG спрайте; внесены сиправления некоторых отступов

--- a/source/less/blocks/reasons.less
+++ b/source/less/blocks/reasons.less
@@ -180,6 +180,11 @@
     width: 33.3%;
   }
 
+  .reasons__description {
+    padding-left: 35px;
+    padding-right: 35px;
+  }
+
   .reasons--other {
     padding-top: 46px;
     padding-bottom: 65px;
