--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -15,7 +15,20 @@
   }
 }
 
+.map_interactive {
+  position: relative;
+  z-index: 2;
+  border: none;
+  width: 100%;
+  height: 350px;
+}
+
 .map__image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+
   background-color: @light-blue;
   width: 100%;
   height: 350px;
