--- a/source/less/blocks/short-promo.less
+++ b/source/less/blocks/short-promo.less
@@ -40,8 +40,8 @@
 .short-promo__short-text-image {
   padding-top: 51px;
   padding-bottom: 62px;
-  max-width: 100%;
-  height: auto;
+  height: 40px;
+  width: auto;
 }
 
 @media (min-width: @tablet-width) {
@@ -57,13 +57,9 @@
     &::after {
       content: "";
       position: absolute;
-      // bottom: -23px;
       left: 0;
-      // height: 80px;
-
       width: 100%;
       background-image: url("../img/bg-intro-triangle-tablet.svg");
-      // background-repeat: no-repeat;
       background-size: 100%, 80px;
     }
   }
@@ -71,6 +67,7 @@
   .short-promo__short-text-image {
     padding-top: 94px;
     padding-bottom: 110px;
+    height: 79px;
   }
 }
 
