--- a/source/less/blocks/introduce.less
+++ b/source/less/blocks/introduce.less
@@ -31,7 +31,8 @@
   padding-top: 12px;
   padding-bottom: 12px;
   padding-left: 18px;
-  width: 100%;
+  width: 50%;
+  flex-grow: 1;
 
   &:hover {
     background-color: #e5e5e5;
