--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -50,7 +50,7 @@
   .page-footer__develop-link {
     padding-top: 7px;
     margin-left: 5px;
-    padding-bottom: 50px;
+    margin-bottom: 50px;
   }
 }
 
@@ -62,6 +62,6 @@
   }
 
   .page-footer__develop-link {
-    padding-bottom: 43px;
+    margin-bottom: 43px;
   }
 }
