--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -32,9 +32,9 @@
 
 .promo__text-image {
   padding-top: 90px;
-  padding-bottom: 80px;
-  max-width: 100%;
-  height: auto;
+  padding-bottom: 78px;
+  height: 214px;
+  width: auto;
 }
 
 .promo__triangle-mobile {
@@ -66,7 +66,8 @@
 
   .promo__text-image {
     padding-top: 77px;
-    padding-bottom: 85px;
+    padding-bottom: 84px;
+    height: 350px;
   }
 }
 
