--- a/source/less/blocks/emotions.less
+++ b/source/less/blocks/emotions.less
@@ -60,6 +60,9 @@
     text-align: center;
     padding-top: 31px;
     padding-bottom: 56px;
+
+    padding-left: 130px;
+    padding-right: 130px;
   }
 }
 
@@ -72,5 +75,10 @@
     &::after {
       width: 280px;
     }
+  }
+
+  .emotions__caption {
+    padding-left: 290px;
+    padding-right: 290px;
   }
 }
