--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -1,6 +1,7 @@
 .social {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
   margin: 0;
   padding: 0;
   padding-bottom: 40px;
@@ -30,6 +31,7 @@
   padding-top: 4px;
   padding-left: 3px;
   padding-right: 3px;
+  padding-bottom: 6px;
 }
 
 @media (min-width: @tablet-width) {
