--- a/source/less/blocks/hotel-search.less
+++ b/source/less/blocks/hotel-search.less
@@ -1,8 +1,12 @@
 .hotel-search {
   text-align: center;
   margin: 0;
-  padding-top: 29px;
+  padding-top: 27px;
   padding-bottom: 50px;
+}
+
+.hotel-search__show-br {
+  display: none;
 }
 
 .hotel-search__header {
@@ -31,7 +35,7 @@
   font-size: 21px;
   line-height: 26px;
   border: none;
-  padding: 15px 47px;
+  padding: 16px 47px;
   cursor: pointer;
 
   &:hover,
@@ -54,9 +58,13 @@
     padding-bottom: 59px;
   }
 
+  .hotel-search__show-br {
+    display: inline;
+  }
+
   .hotel-search__header {
     font-size: 30px;
-    padding-top: 25px;
+    padding-top: 28px;
   }
 
   .hotel-search__description {
@@ -80,7 +88,7 @@
   }
 
   .hotel-search__header {
-    padding-top: 27px;
+    padding-top: 29px;
   }
 
   .hotel-search__description {
