--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -36,6 +36,7 @@
   padding-bottom: 12px;
   padding-left: 19px;
   padding-right: 58px;
+  height: 58px;
   width: 100%;
 
   &:hover {
@@ -195,7 +196,7 @@
     flex-direction: row;
 
     &:nth-child(2n-1) {
-      padding-right: 78px;
+      padding-right: 76px;
     }
   }
 
