--- a/source/less/blocks/hotel-search.less
+++ b/source/less/blocks/hotel-search.less
@@ -2,10 +2,10 @@
   text-align: center;
   margin: 0;
   padding-top: 27px;
-  padding-bottom: 50px;
+  padding-bottom: 66px;
 }
 
-.hotel-search__show-br {
+.hotel-search__description br {
   display: none;
 }
 
@@ -19,7 +19,7 @@
 .hotel-search__description {
   margin: 0;
   padding-top: 20px;
-  padding-bottom: 35px;
+  padding-bottom: 50px;
   padding-left: 20px;
   padding-right: 20px;
   color: @grey;
@@ -55,10 +55,10 @@
 
 @media (min-width: @tablet-width) {
   .hotel-search {
-    padding-bottom: 59px;
+    padding-bottom: 75px;
   }
 
-  .hotel-search__show-br {
+  .hotel-search__description br {
     display: inline;
   }
 
@@ -69,7 +69,7 @@
 
   .hotel-search__description {
     padding-top: 31px;
-    padding-bottom: 43px;
+    padding-bottom: 57px;
     padding-left: 150px;
     padding-right: 150px;
   }
@@ -84,7 +84,7 @@
 
 @media (min-width: @desktop-width) {
   .hotel-search {
-    padding-bottom: 67px;
+    padding-bottom: 81px;
   }
 
   .hotel-search__header {
@@ -93,7 +93,7 @@
 
   .hotel-search__description {
     padding-top: 30px;
-    padding-bottom: 48px;
+    padding-bottom: 63px;
     padding-left: 350px;
     padding-right: 350px;
   }
