--- a/source/less/blocks/impression.less
+++ b/source/less/blocks/impression.less
@@ -15,15 +15,15 @@
   padding-left: 20px;
 }
 
-.impression__radio {
-  display: none;
+.impression__radio:focus ~ .impression__label::before {
+  outline: thin dotted;
 }
 
 .impression__label {
   font-size: 18px;
   font-weight: bold;
   text-transform: none;
-  padding-left: 58px;
+  padding-left: 40px;
 
   position: relative;
   cursor: pointer;
@@ -32,7 +32,7 @@
     content: "";
     position: absolute;
     top: -14px;
-    left: -20px;
+    left: -38px;
     width: 56px;
     height: 56px;
     margin: auto;
@@ -40,7 +40,8 @@
     background-color: #f2f2f2;
   }
 
-  &:hover::before {
+  &:hover::before,
+  &:focus::before {
     background-color: #e5e5e5;
   }
 
@@ -54,7 +55,7 @@
     content: "";
     position: absolute;
     top: 3px;
-    left: -3px;
+    left: -20px;
     width: 22px;
     height: 22px;
     margin: auto;
