Внесение исправлений в верстку ч7

--- a/source/less/blocks/attractions.less
+++ b/source/less/blocks/attractions.less
@@ -1,5 +1,5 @@
 .attractions {
-  border-top: 1px solid #e5e5e5;
+  border-top: 1px solid @dark-grey;
   line-height: 26px;
 }
 
@@ -35,15 +35,15 @@
     height: 56px;
     margin: auto;
     border-radius: 10%;
-    background-color: #f2f2f2;
+    background-color: @lighter-grey;
   }
 
   &:hover::before {
-    background-color: #e5e5e5;
+    background-color: @dark-grey;
   }
 
   &:focus::before {
-    background-color: #e5e5e5;
+    background-color: @dark-grey;
   }
 
   &:active::before {
@@ -81,7 +81,7 @@
       left: 0;
       width: 125px;
       height: 1px;
-      border-top: 1px solid #dbdbdb;
+      border-top: 1px solid @darker-grey;
     }
 
     &::after {
@@ -91,7 +91,7 @@
       right: 0;
       width: 125px;
       height: 1px;
-      border-top: 1px solid #dbdbdb;
+      border-top: 1px solid @darker-grey;
     }
   }
 
@@ -130,7 +130,7 @@
       left: 0;
       width: 280px;
       height: 1px;
-      border-top: 1px solid #dbdbdb;
+      border-top: 1px solid @darker-grey;
     }
 
     &::after {
@@ -140,7 +140,7 @@
       right: 0;
       width: 280px;
       height: 1px;
-      border-top: 1px solid #dbdbdb;
+      border-top: 1px solid @darker-grey;
     }
   }
 
