--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -1,5 +1,5 @@
 .contacts {
-  border-top: 1px solid #e5e5e5;
+  border-top: 1px solid @dark-grey;
   line-height: 26px;
   padding-bottom: 14px;
 }
@@ -40,13 +40,13 @@
   width: 100%;
 
   &:hover {
-    background-color: #e5e5e5;
-    border: 4px solid #e5e5e5;
+    background-color: @dark-grey;
+    border: 4px solid @dark-grey;
   }
 
   &:focus {
     background-color: @white;
-    border: 4px solid #e5e5e5;
+    border: 4px solid @dark-grey;
   }
 }
 
@@ -110,7 +110,7 @@
       left: 0;
       width: 125px;
       height: 1px;
-      border-top: 1px solid #dbdbdb;
+      border-top: 1px solid @darker-grey;
     }
 
     &::after {
@@ -120,7 +120,7 @@
       right: 0;
       width: 125px;
       height: 1px;
-      border-top: 1px solid #dbdbdb;
+      border-top: 1px solid @darker-grey;
     }
   }
 
@@ -149,7 +149,7 @@
       left: 0;
       width: 280px;
       height: 1px;
-      border-top: 1px solid #dbdbdb;
+      border-top: 1px solid @darker-grey;
     }
 
     &::after {
@@ -159,7 +159,7 @@
       right: 0;
       width: 280px;
       height: 1px;
-      border-top: 1px solid #dbdbdb;
+      border-top: 1px solid @darker-grey;
     }
   }
 
