--- a/source/less/blocks/emotions.less
+++ b/source/less/blocks/emotions.less
@@ -1,5 +1,5 @@
 .emotions {
-  border-top: 1px solid #e5e5e5;
+  border-top: 1px solid @dark-grey;
   line-height: 26px;
   padding-bottom: 15px;
 }
@@ -40,7 +40,7 @@
       left: 0;
       width: 125px;
       height: 1px;
-      border-top: 1px solid #dbdbdb;
+      border-top: 1px solid @darker-grey;
     }
 
     &::after {
@@ -50,7 +50,7 @@
       right: 0;
       width: 125px;
       height: 1px;
-      border-top: 1px solid #dbdbdb;
+      border-top: 1px solid @darker-grey;
     }
   }
 
