--- a/source/less/blocks/gallary.less
+++ b/source/less/blocks/gallary.less
@@ -5,7 +5,7 @@
 }
 
 .gallary__item {
-  border-top: 1px solid #e5e5e5;
+  border-top: 1px solid @dark-grey;
   padding-top: 23px;
   padding-left: 20px;
   padding-right: 20px;
@@ -84,7 +84,7 @@
   }
 
   .gallary__description {
-    background-color: #f2f2f2;
+    background-color: @lighter-grey;
     padding-right: 20px;
     padding-left: 20px;
     flex-direction: row;
@@ -156,6 +156,6 @@
 
   .gallary__likes-icon {
     left: 5px;
-    fill: #ffffff;
+    fill: @white;
   }
 }
