--- a/source/less/blocks/introduce.less
+++ b/source/less/blocks/introduce.less
@@ -1,5 +1,5 @@
 .introduce {
-  border-top: 1px solid #e5e5e5;
+  border-top: 1px solid @dark-grey;
   line-height: 26px;
   padding-bottom: 5px;
 }
@@ -36,13 +36,13 @@
   flex-grow: 1;
 
   &:hover {
-    background-color: #e5e5e5;
-    border: 4px solid #e5e5e5;
+    background-color: @dark-grey;
+    border: 4px solid @dark-grey;
   }
 
   &:focus {
     background-color: @white;
-    border: 4px solid #e5e5e5;
+    border: 4px solid @dark-grey;
   }
 }
 
