--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -10,11 +10,11 @@
 .social__link {
   height: 48px;
   min-width: 46px;
-  background-color: #81b3d2;
+  background-color: @light-blue;
   display: flex;
   align-items: center;
   justify-content: center;
-  fill: #ffffff;
+  fill: @white;
 
   &:hover,
   &:focus {
