--- a/source/less/blocks/video-player.less
+++ b/source/less/blocks/video-player.less
@@ -18,7 +18,7 @@
   align-items: center;
   padding-left: 25px;
   padding-right: 25px;
-  background-color: #f2f2f2;
+  background-color: @lighter-grey;
   bottom: 48px;
   left: 0;
   right: 0;
@@ -41,7 +41,7 @@
     position: absolute;
     height: 0;
     width: 0;
-    border: 5px solid #ffffff;
+    border: 5px solid @white;
     border-radius: 50%;
     bottom: 17px;
     left: 57px;
@@ -67,7 +67,7 @@
 
   &:hover,
   &:focus {
-    fill: #333333;
+    fill: @grey;
   }
 
   &:active {
@@ -133,7 +133,7 @@
   }
 
   .video-player__button {
-    fill: #ffffff;
+    fill: @white;
 
     &:hover,
     &:focus {
