--- a/source/less/blocks/welcome-text.less
+++ b/source/less/blocks/welcome-text.less
@@ -39,7 +39,7 @@
 .welcome-text--gallary-total {
   padding-top: 15px;
   padding-bottom: 29px;
-  border-top: 1px solid #e5e5e5;
+  border-top: 1px solid @dark-grey;
 }
 
 .welcome-text--gallary-total .welcome-text__about {
