--- a/source/less/blocks/sending-success.less
+++ b/source/less/blocks/sending-success.less
@@ -6,7 +6,7 @@
   right: 0;
   margin-left: auto;
   margin-right: auto;
-  background-color: #f2f2f2;
+  background-color: @lighter-grey;
   line-height: 26px;
   text-align: center;
   box-shadow: 0 5px 15px -5px rgba(0, 1, 1, 0.2),
