--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -4,6 +4,8 @@
 @grey: #333333;
 @light-grey: #eeeeee;
 @lighter-grey: #f2f2f2;
+@dark-grey: #e5e5e5;
+@darker-grey: #dbdbdb;
 @red: #ff0000;
 @green: #00e01e;
 @mobile-width: 320px;
