Внесение исправлений в верстку перед защитой

--- a/source/less/blocks/welcome-text.less
+++ b/source/less/blocks/welcome-text.less
@@ -36,6 +36,11 @@
   padding-bottom: 9px;
 }
 
+.welcome-text--gallary .welcome-text__reasons--narrow {
+  padding-left: 4px;
+  padding-right: 4px;
+}
+
 .welcome-text--gallary-total {
   padding-top: 15px;
   padding-bottom: 29px;
@@ -57,6 +62,12 @@
   padding-bottom: 9px;
 }
 
+.welcome-text--form .welcome-text__reasons--narrow {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+
 @media (min-width: @tablet-width) {
   .welcome-text {
     padding-top: 30px;
@@ -75,11 +86,11 @@
   .welcome-text__reasons {
     color: @grey;
     font-size: 14px;
-    padding-bottom: 8px;
+    padding-bottom: 7px;
   }
 
   .welcome-text--gallary {
-    padding-top: 44px;
+    padding-top: 45px;
   }
 
   .welcome-text--gallary .welcome-text__about {
@@ -88,8 +99,8 @@
   }
 
   .welcome-text--gallary .welcome-text__reasons {
-    padding-left: 50px;
-    padding-right: 50px;
+    padding-left: 55px;
+    padding-right: 55px;
   }
 
   .welcome-text--gallary-total {
@@ -122,8 +133,8 @@
   }
 
   .welcome-text--form .welcome-text__reasons {
-    padding-left: 140px;
-    padding-right: 140px;
+    padding-left: 143px;
+    padding-right: 143px;
   }
 }
 
@@ -139,7 +150,7 @@
 
   .welcome-text--gallary .welcome-text__about {
     font-size: 30px;
-    padding-bottom: 0;
+    padding-bottom: 1px;
   }
 
   .welcome-text--gallary .welcome-text__reasons {
@@ -160,15 +171,15 @@
   }
 
   .welcome-text--gallary-total .welcome-text__reasons {
-    padding-left: 60px;
-    padding-right: 60px;
+    padding-left: 73px;
+    padding-right: 73px;
   }
 
   .welcome-text--form {
     padding-top: 81px;
     padding-left: 20px;
     padding-right: 20px;
-    padding-bottom: 0;
+    padding-bottom: 2px;
   }
 
   .welcome-text--form .welcome-text__about {
