--- a/source/less/blocks/site-container.less
+++ b/source/less/blocks/site-container.less
@@ -6,6 +6,10 @@
   background-color: @white;
 }
 
+.site-container ul {
+  list-style: none;
+}
+
 @media (min-width: @tablet-width) {
   .site-container {
     width: @tablet-width;
