--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -2,38 +2,34 @@
   margin-bottom: 56px;
 }
 
-.main-nav--hide {
+.main-nav__wrapper--hide {
   @media @mobile-width-only {
     display: none;
   }
 }
 
-.main-nav--show {
-  @media @mobile-width-only {
-    transform-origin: top;
-    animation: main-nav__show-animation 0.3s;
-  }
-}
-
-.main-nav__close-nav {
+.main-nav__menu-button {
   position: absolute;
-  top: 16px;
-  right: 14px;
-  border: none;
-  background: none;
-  fill: @white;
-  cursor: pointer;
-}
-
-.main-nav__open-nav {
-  position: absolute;
-  bottom: 14px;
+  top: 14px;
   right: 14px;
   border: none;
   color: @light-blue;
+  cursor: pointer;
+}
+
+.main-nav__menu-button--open {
   background-color: @white;
   fill: @light-blue;
-  cursor: pointer;
+}
+
+.main-nav__menu-button--close {
+  background: none;
+  fill: @white;
+}
+
+.main-nav__menu-button--hide,
+.main-nav__menu-icon--hide {
+  display: none;
 }
 
 @media (min-width: @tablet-width) {
@@ -41,11 +37,7 @@
     margin-bottom: 0;
   }
 
-  .main-nav__open-nav {
-    display: none;
-  }
-
-  .main-nav__close-nav {
+  .main-nav__menu-button {
     display: none;
   }
 }
